--- a/html/project/project_yg.html
+++ b/html/project/project_yg.html
@@ -66,7 +66,7 @@
             <dt>Service</dt>
             <dd>연예 기획사 yg엔터테인먼트의 홈페이지</dd>
             <dt>Project</dt>
-            <dd>컨텐츠들의 <span>주목성</span>이 낮고 사용자가 원하는 정보들이 메인페이지에 충분히 노출되지 않는점 등을 개선하여 <span>역동적</span>이게 리뉴얼하였습니다.</dd>
+            <dd>컨텐츠들의 <span>주목성</span>이 낮고 사용자가 원하는 정보들이 메인 페이지에 충분히 노출되지 않는 점 등을 개선하여 <span>역동적</span>으로 리뉴얼하였습니다.</dd>
           </dl>
         </div>
       </div>
