--- a/html/project/project_yg.html
+++ b/html/project/project_yg.html
@@ -15,7 +15,7 @@
 
   <!-- fontAwesome and Font -->
   <link rel="stylesheet" href="../../fontAwesome/css/font-awesome.css">
-  <link rel="stylesheet" href="../font/transfonterNanum/stylesheet.css">
+  <link rel="stylesheet" href="../../font/transfonterNanum/stylesheet.css">
   <!-- css Reset and globalClass -->
   <link rel="stylesheet" href="../../css/base/reset.css">
   <link rel="stylesheet" href="../../css/base/common.css">
