--- a/html/mypage.html
+++ b/html/mypage.html
@@ -27,7 +27,7 @@
   <title>김하늘 포트폴리오</title>
 
 </head>
-<body>
+<body scroll="no">
   <div id="wrap">
     <header id="headBox">
       <h1>
@@ -123,104 +123,80 @@
                       <div class="text_before">R</div>
                     </div>
                   </dt>
-                  <dd>연예 기획사 yg엔터테인먼트</dd>
+                  <dd>연예 기획사 yg엔터테인먼트(개인 리뉴얼)</dd>
                 </dl>
               </a>
             </li>
             <li>
-              <a href="#">
+              <a href="project/project_boolatoon.html">
                 <dl>
                   <div class="list_img"></div>
-                  <dt class="knowhow">
+                  <dt class="boolatoon">
                     <div class="text_wrap">
-                      <div class="text_after">K</div>
-                      <div class="text_before">K</div>
-                    </div>
-                    <div class="text_wrap">
-                      <div class="text_after">N</div>
-                      <div class="text_before">N</div>
+                      <div class="text_after">B</div>
+                      <div class="text_before">B</div>
                     </div>
                     <div class="text_wrap">
                       <div class="text_after">O</div>
                       <div class="text_before">O</div>
                     </div>
                     <div class="text_wrap">
-                      <div class="text_after">W</div>
-                      <div class="text_before">W</div>
-                    </div>
-                    <div class="text_wrap">
-                      <div class="text_after">-</div>
-                      <div class="text_before">-</div>
-                    </div>
-                    <div class="text_wrap">
-                      <div class="text_after">H</div>
-                      <div class="text_before">H</div>
-                    </div>
-                    <div class="text_wrap">
                       <div class="text_after">O</div>
                       <div class="text_before">O</div>
                     </div>
-                    <div class="text_wrap">
-                      <div class="text_after">W</div>
-                      <div class="text_before">W</div>
-                    </div>
-                  </dt>
-                  <dd>페이롤 서비스의 기준</dd>
-                </dl>
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <dl>
-                  <div class="list_img"></div>
-                  <dt class="legality">
                     <div class="text_wrap">
                       <div class="text_after">L</div>
                       <div class="text_before">L</div>
-                    </div>
-                    <div class="text_wrap">
-                      <div class="text_after">E</div>
-                      <div class="text_before">E</div>
-                    </div>
-                    <div class="text_wrap">
-                      <div class="text_after">G</div>
-                      <div class="text_before">G</div>
                     </div>
                     <div class="text_wrap">
                       <div class="text_after">A</div>
                       <div class="text_before">A</div>
                     </div>
                     <div class="text_wrap">
-                      <div class="text_after">L</div>
-                      <div class="text_before">L</div>
-                    </div>
-                    <div class="text_wrap">
-                      <div class="text_after">I</div>
-                      <div class="text_before">I</div>
-                    </div>
-                    <div class="text_wrap">
                       <div class="text_after">T</div>
                       <div class="text_before">T</div>
                     </div>
                     <div class="text_wrap">
-                      <div class="text_after">Y</div>
-                      <div class="text_before">Y</div>
+                      <div class="text_after">O</div>
+                      <div class="text_before">O</div>
                     </div>
-                    <div class="test">
-                      <div>Y</div>
-                      <div>G</div>
-                      <div>E</div>
-                      <div>N</div>
-                      <div>T</div>
-                      <div>E</div>
-                      <div>R</div>
+                    <div class="text_wrap">
+                      <div class="text_after">O</div>
+                      <div class="text_before">O</div>
+                    </div>
+                    <div class="text_wrap">
+                      <div class="text_after">N</div>
+                      <div class="text_before">N</div>
                     </div>
                   </dt>
-                  <dd>적법한 세무대리인의 신고대행</dd>
+                  <dd>웹툰 편집 웹 애플리케이션</dd>
                 </dl>
               </a>
             </li>
             <li>
+              <a href="project/project_acg.html">
+                <dl>
+                  <div class="list_img"></div>
+                  <dt class="acg">
+                    <div class="text_wrap">
+                      <div class="text_after">A</div>
+                      <div class="text_before">A</div>
+                    </div>
+                    <div class="text_wrap">
+                      <div class="text_after">C</div>
+                      <div class="text_before">C</div>
+                    </div>
+                    <div class="text_wrap">
+                      <div class="text_after">G</div>
+                      <div class="text_before">G</div>
+                    </div>
+                  </dt>
+                  <dd>HR과 관련된 서비스(헤드헌팅, 채용포털, 자문가 연결)</dd>
+                </dl>
+              </a>
+            </li>
+            <!-- 사이즈 재기용 테스트와 프로젝트 추가 시 넣을 예시 -->
+            <!-- <li>
               <a href="#">
                 <dl>
                   <div class="list_img"></div>
@@ -257,21 +233,16 @@
                       <div class="text_after">Y</div>
                       <div class="text_before">Y</div>
                     </div>
-<!--                     <div class="test">
-                      <div>S</div>
-                      <div>E</div>
+                    <div class="test">
+                      <div>A</div>
                       <div>C</div>
-                      <div>U</div>
-                      <div>R</div>
-                      <div>I</div>
-                      <div>T</div>
-                      <div>Y</div>
-                    </div> -->
+                      <div>G</div>
+                    </div>
                   </dt>
                   <dd>적법한 세무대리인의 신고대행</dd>
                 </dl>
               </a>
-            </li>
+            </li> -->
           </ul>
         </div>
         <div class="white_wrap"></div>
