--- a/html/project/project_acg.html
+++ b/html/project/project_acg.html
@@ -41,7 +41,7 @@
     <!-- //headBox -->
     <section>
       <div class="section_01">
-        <img src="../../img/project_yg/section_01.jpg" alt="와이지엔터테인먼트 섹션일" style="width: 100%">
+        <img src="../../img/project_acg/section_01.jpg" alt="에센컨설팅그룹 섹션일" style="width: 100%">
       </div>
       <div class="intro_wrap clearfix">
         <div class="intro_role">
@@ -72,14 +72,8 @@
         </div>
       </div>
       <div class="section_02">
-        <img src="../../img/project_yg/section_02_03.jpg" alt="와이지엔터테인먼트 섹션이삼" style="width: 100%">
+        <img src="../../img/project_acg/section_02.jpg" alt="에센컨설팅그룹 섹션이" style="width: 100%">
       </div>
-      <!-- <div class="section_04">
-        <img src="../../img/project_yg/section_04.jpg" alt="와이지엔터테인먼트 섹션사" style="width: 100%">
-      </div> -->
-      <!-- <div class="section_05">
-        <img src="../../img/project_yg/section_05.png" alt="와이지엔터테인먼트 섹션오" style="width: 100%">
-      </div> -->
     </section>
 
     <!-- //section -->
