--- a/html/mypage.html
+++ b/html/mypage.html
@@ -86,6 +86,44 @@
         <div class="list_wrap">
           <ul>
             <li>
+              <a href="project/project_output.html">
+                <dl>
+                  <div class="thumb_img backimg thumb_output"><span class="hidden">프로젝트 모음 썸네일</span></div>
+                  <dt class="output">
+                    <div class="text_wrap">
+                      <div class="text_after">P</div>
+                      <div class="text_before">P</div>
+                    </div>
+                    <div class="text_wrap">
+                      <div class="text_after">R</div>
+                      <div class="text_before">R</div>
+                    </div>
+                    <div class="text_wrap">
+                      <div class="text_after">O</div>
+                      <div class="text_before">O</div>
+                    </div>
+                    <div class="text_wrap">
+                      <div class="text_after">J</div>
+                      <div class="text_before">J</div>
+                    </div>
+                    <div class="text_wrap">
+                      <div class="text_after">E</div>
+                      <div class="text_before">E</div>
+                    </div>
+                    <div class="text_wrap">
+                      <div class="text_after">C</div>
+                      <div class="text_before">C</div>
+                    </div>
+                    <div class="text_wrap">
+                      <div class="text_after">T</div>
+                      <div class="text_before">T</div>
+                    </div>
+                  </dt>
+                  <dd>프로젝트, 경력 모음</dd>
+                </dl>
+              </a>
+            </li>
+            <li>
               <a href="project/project_yg.html">
                 <dl>
                   <div class="thumb_img backimg thumb_yg"><span class="hidden">와이지썸네일</span></div>
@@ -234,9 +272,13 @@
                       <div class="text_before">Y</div>
                     </div>
                     <div class="test">
-                      <div>A</div>
+                      <div>P</div>
+                      <div>R</div>
+                      <div>O</div>
+                      <div>J</div>
+                      <div>E</div>
                       <div>C</div>
-                      <div>G</div>
+                      <div>T</div>
                     </div>
                   </dt>
                   <dd>적법한 세무대리인의 신고대행</dd>
