txt,이미지 정리,추가

--- a/html/mypage.html
+++ b/html/mypage.html
@@ -22,8 +22,8 @@
   <!-- use css -->
   <link rel="stylesheet" href="../css/src/mypage.css">
   <!-- faviconFile -->
-  <!-- <link rel="apple-touch-icon" href="../favicon.png"> -->
-  <!-- <link rel="shortcut icon" href="../favicon.png" type="image/x-icon"> -->
+  <link rel="apple-touch-icon" href="../img/main/favicon.png">
+  <link rel="shortcut icon" href="../img/main/favicon.png" type="image/x-icon">
   <title>김하늘 포트폴리오</title>
 
 </head>
@@ -32,10 +32,11 @@
     <header id="headBox">
       <h1>
         <a href="mypage.html">
-          <span class="hidden">로고</span> 
+          <span class="hidden">김하늘 포트폴리오 홈버튼 로고</span> 
         </a>
       </h1>
-      <button type="button" class="resume">resume</button>
+      <!-- 이력서 보기 버튼을 메인페이지에서 output페이지로 옮김. -->
+      <!-- <button type="button" class="resume">resume</button> -->
     </header>
     <!-- //headBox -->
     <section id="container">
@@ -161,7 +162,7 @@
                       <div class="text_before">R</div>
                     </div>
                   </dt>
-                  <dd>연예 기획사 yg엔터테인먼트(개인 리뉴얼)</dd>
+                  <dd>연예 기획사 yg엔터테인먼트(개인 프로젝트)</dd>
                 </dl>
               </a>
             </li>
@@ -207,7 +208,7 @@
                       <div class="text_before">N</div>
                     </div>
                   </dt>
-                  <dd>웹툰 편집 웹 애플리케이션</dd>
+                  <dd>웹툰 편집 웹 애플리케이션(경력)</dd>
                 </dl>
               </a>
             </li>
@@ -229,7 +230,7 @@
                       <div class="text_before">G</div>
                     </div>
                   </dt>
-                  <dd>HR과 관련된 서비스(헤드헌팅, 채용포털, 자문가 연결)</dd>
+                  <dd>HR과 관련된 서비스(프리랜서 경력)</dd>
                 </dl>
               </a>
             </li>
@@ -301,7 +302,8 @@
       <!-- //btn -->
     </section>
     <!-- //container -->
-    <div class="reume_modal">
+    <!-- 이력서 보기 버튼을 메인페이지에서 output페이지로 옮김. -->
+    <!-- <div class="reume_modal">
       <div class="pdf_wrap">
         <img src="../img/resume/resume.jpg" alt="" style="width: 100%">
       </div>
@@ -311,7 +313,7 @@
           <i class="fa fa-times"></i>
         </button>
       </div>
-    </div>
+    </div> -->
     <!-- //reume_modal -->
   </div>
   <!-- //wrap -->
