--- a/html/project/project_acg.html
+++ b/html/project/project_acg.html
@@ -22,9 +22,9 @@
   <!-- use css -->
   <link rel="stylesheet" href="../../css/src/project/project_acg.css">
   <!-- faviconFile -->
-  <!-- <link rel="apple-touch-icon" href="../favicon.png"> -->
-  <!-- <link rel="shortcut icon" href="../favicon.png" type="image/x-icon"> -->
-  <title>김하늘 포트폴리오 ACG</title>
+  <link rel="apple-touch-icon" href="../../img/main/favicon.png">
+  <link rel="shortcut icon" href="../../img/main/favicon.png" type="image/x-icon">
+  <title>ACG 프리랜서 경력</title>
 
 </head>
 <body>
@@ -32,7 +32,7 @@
     <header id="headBox">
       <h1>
         <a href="../mypage.html">
-          <span class="hidden">로고</span> 
+          <span class="hidden">김하늘 포트폴리오 홈버튼 로고</span> 
         </a>
       </h1>
       <div class="page_name">ACG 에센 컨설팅 그룹(협업, 프리랜서)</div>
@@ -46,7 +46,7 @@
         <div class="intro_role">
           <dl>
             <dt>ACG 에센 컨설팅 그룹</dt>
-            <dd>2018.03 (1개월, 프리랜서)</dd>
+            <dd>2018.03 (1개월, 프리랜서, 프로젝트 완료 후 계약종료)</dd>
             <dt>Position</dt>
             <dd>어센더즈 웹디자이너에게 디자인을 전달받아 <span>반응형 웹페이지 코딩을(HTML, CSS, jQuery)</span> 진행하였습니다.</dd>
             <dt>반응형 디자인</dt>
