--- a/html/project/project_boolatoon.html
+++ b/html/project/project_boolatoon.html
@@ -22,9 +22,9 @@
   <!-- use css -->
   <link rel="stylesheet" href="../../css/src/project/project_boolatoon.css">
   <!-- faviconFile -->
-  <!-- <link rel="apple-touch-icon" href="../favicon.png"> -->
-  <!-- <link rel="shortcut icon" href="../favicon.png" type="image/x-icon"> -->
-  <title>김하늘 포트폴리오 불라툰</title>
+  <link rel="apple-touch-icon" href="../../img/main/favicon.png">
+  <link rel="shortcut icon" href="../../img/main/favicon.png" type="image/x-icon">
+  <title>불라툰 경력</title>
 
 </head>
 <body>
@@ -32,10 +32,10 @@
     <header id="headBox">
       <h1>
         <a href="../mypage.html">
-          <span class="hidden">로고</span> 
+          <span class="hidden">김하늘 포트폴리오 홈버튼 로고</span> 
         </a>
       </h1>
-      <div class="page_name">BOOLATOON 불라툰 (퍼블리싱, UX)</div>
+      <div class="page_name">BOOLATOON 불라툰 (경력, 퍼블리싱, UX)</div>
     </header>
     <!-- //headBox -->
     <section>
@@ -58,6 +58,8 @@
         </div>
         <div class="intro_pro">
           <dl>
+            <dt>Cross Browsing</dt>
+            <dd>크롬, 사파리</dd>
             <dt>Service</dt>
             <dd>다운로드 없이 웹에서 하는 웹툰 편집기</dd>
             <dt>Project</dt>
