--- a/html/project/project_boolatoon_branding.html
+++ b/html/project/project_boolatoon_branding.html
@@ -22,9 +22,9 @@
   <!-- use css -->
   <link rel="stylesheet" href="../../css/src/project/project_boolatoon_branding.css">
   <!-- faviconFile -->
-  <!-- <link rel="apple-touch-icon" href="../favicon.png"> -->
-  <!-- <link rel="shortcut icon" href="../favicon.png" type="image/x-icon"> -->
-  <title>김하늘 포트폴리오 불라툰</title>
+  <link rel="apple-touch-icon" href="../../img/main/favicon.png">
+  <link rel="shortcut icon" href="../../img/main/favicon.png" type="image/x-icon">
+  <title>불라툰 경력</title>
 
 </head>
 <body>
@@ -32,7 +32,7 @@
     <header id="headBox">
       <h1>
         <a href="../mypage.html">
-          <span class="hidden">로고</span> 
+          <span class="hidden">김하늘 포트폴리오 홈버튼 로고</span> 
         </a>
       </h1>
       <div class="page_name">BOOLATOON 불라툰 &#62; Branding</div>
