--- a/html/project/project_output.html
+++ b/html/project/project_output.html
@@ -22,9 +22,9 @@
   <!-- use css -->
   <link rel="stylesheet" href="../../css/src/project/project_output.css">
   <!-- faviconFile -->
-  <!-- <link rel="apple-touch-icon" href="../favicon.png"> -->
-  <!-- <link rel="shortcut icon" href="../favicon.png" type="image/x-icon"> -->
-  <title>김하늘 프로젝트 결과물 모음</title>
+  <link rel="apple-touch-icon" href="../../img/main/favicon.png">
+  <link rel="shortcut icon" href="../../img/main/favicon.png" type="image/x-icon">
+  <title>프로젝트 결과물, 경력 모음</title>
 
 </head>
 <body>
@@ -32,9 +32,11 @@
     <header id="headBox">
       <h1>
         <a href="../mypage.html">
-          <span class="hidden">로고</span> 
+          <span class="hidden">김하늘 포트폴리오 홈버튼 로고</span> 
         </a>
       </h1>
+      <!-- 이력서 일단 없앰
+      <button type="button" class="resume">resume</button> -->
       <div class="page_name">경력, 프로젝트 모음</div>
     </header>
     <!-- //headBox -->
@@ -47,18 +49,12 @@
               <div class="item_info">
                 <div class="info_txtwrap">
                   <p class="info_title">YG 엔터테인먼트 리뉴얼</p>
-                  <p>화면구성 <span>&#8226;</span> 디자인 <span>&#8226;</span> 퍼블리싱 <span>&#8226;</span> 2018.04(1개월)</p>
-                  <p>반응형(PC, 태블릿, 모바일) <span>&#8226;</span> 역동적</p>
-                  <p>크로스 브라우징</p>
+                  <p>화면구성 디자인 <span>&#8226;</span> 퍼블리싱 <span>&#8226;</span> 2018.04(1개월)</p>
+                  <p>반응형(PC, 태블릿, 모바일) <span>&#8226;</span> 4페이지 <span>&#8226;</span> 역동적</p>
+                  <p>크롬 <span>&#8226;</span> 파이어폭스 <span>&#8226;</span> IE11 <span>&#8226;</span> 엣지 <span>&#8226;</span> 오페라</p>
                 </div>
               </div>
             </a>
-            <!-- 링크 디자인 다듬고
-            <div class="item_link">
-              <a href="project_yg.html" target="_blank">프로젝트 설명</a>
-              <a href="https://haneulkimgreen.github.io/rwd_yg/" target="_blank">리뉴얼 사이트</a>
-            </div>
-             -->
           </div>
           <div class="project_item item_02">
             <a href="https://haneulkimgreen.github.io/rwd_yg/html/yg_06_artist_detail_main.html" target="_blank">
@@ -68,19 +64,19 @@
                   <p class="info_title">YG 아티스트 페이지 리뉴얼</p>
                   <p>화면구성 <span>&#8226;</span> 디자인 <span>&#8226;</span> 퍼블리싱 <span>&#8226;</span> 2018.04(1개월)</p>
                   <p>반응형(PC, 태블릿, 모바일) <span>&#8226;</span> 3페이지</p>
-                  <p>크로스 브라우징</p>
+                  <p>크롬 <span>&#8226;</span> 파이어폭스 <span>&#8226;</span> IE11 <span>&#8226;</span> 엣지 <span>&#8226;</span> 오페라</p>
                 </div>
               </div>
             </a>
           </div>
           <div class="project_item item_03">
             <a href="#" target="_blank">
-              <img src="" alt="넷플릭스 비디오 구현">
+              <img src="" alt="마우스 스크롤 이용">
               <div class="item_info">
                 <div class="info_txtwrap">
-                  <p class="info_title">넷플릭스 동영상 구현</p>
-                  <p>퍼블리싱 <span>&#8226;</span> 2019.07(??)</p>
-                  <p>동영상</p>
+                  <p class="info_title">마우스 스크롤 기능 관련 추가 예정</p>
+                  <p>퍼블리싱 <span>&#8226;</span> 2019.07</p>
+                  <p>마우스 스크롤</p>
                   <p>크로스 브라우징</p>
                 </div>
               </div>
@@ -120,7 +116,7 @@
                   <p class="info_title">ACG 에센 컨설팅 그룹</p>
                   <p>퍼블리싱 <span>&#8226;</span> 2018.03(1개월, 프리랜서)</p>
                   <p>반응형(PC, 태블릿, 모바일)</p>
-                  <p>크로스 브라우징이나 관련 정보</p>
+                  <p>프로젝트 완료 후 계약 종료</p>
                 </div>
               </div>
             </a>
@@ -129,12 +125,12 @@
         <!-- //project_row 01 -->
         <div class="project_row row_02">
           <div class="project_item item_07">
-            <a href="#" target="_blank">
+            <a href="#">
               <img src="" alt="추가 예정입니다!">
               <div class="item_info">
                 <div class="info_txtwrap">
                   <p class="info_title">프로젝트명</p>
-                  <p>퍼블리싱 <span>&#8226;</span> 2019.07</p>
+                  <p>퍼블리싱 <span>&#8226;</span> 날짜</p>
                   <p>반응형(PC, 태블릿, 모바일)</p>
                   <p>크로스 브라우징이나 관련 정보</p>
                 </div>
@@ -142,12 +138,12 @@
             </a>
           </div>
           <div class="project_item item_08">
-            <a href="#" target="_blank">
+            <a href="#">
               <img src="" alt="추가 예정입니다!">
               <div class="item_info">
                 <div class="info_txtwrap">
                   <p class="info_title">프로젝트명</p>
-                  <p>퍼블리싱 <span>&#8226;</span> 2019.07</p>
+                  <p>퍼블리싱 <span>&#8226;</span> 날짜</p>
                   <p>반응형(PC, 태블릿, 모바일)</p>
                   <p>크로스 브라우징이나 관련 정보</p>
                 </div>
@@ -155,12 +151,12 @@
             </a>
           </div>
           <div class="project_item item_09">
-            <a href="#" target="_blank">
+            <a href="#">
               <img src="" alt="추가 예정입니다!">
               <div class="item_info">
                 <div class="info_txtwrap">
                   <p class="info_title">프로젝트명</p>
-                  <p>퍼블리싱 <span>&#8226;</span> 2019.07</p>
+                  <p>퍼블리싱 <span>&#8226;</span> 날짜</p>
                   <p>반응형(PC, 태블릿, 모바일)</p>
                   <p>크로스 브라우징이나 관련 정보</p>
                 </div>
@@ -168,12 +164,12 @@
             </a>
           </div>
           <div class="project_item item_10">
-            <a href="#" target="_blank">
+            <a href="#">
               <img src="" alt="추가 예정입니다!">
               <div class="item_info">
                 <div class="info_txtwrap">
                   <p class="info_title">프로젝트명</p>
-                  <p>퍼블리싱 <span>&#8226;</span> 2019.07</p>
+                  <p>퍼블리싱 <span>&#8226;</span> 날짜</p>
                   <p>반응형(PC, 태블릿, 모바일)</p>
                   <p>크로스 브라우징이나 관련 정보</p>
                 </div>
@@ -181,12 +177,12 @@
             </a>
           </div>
           <div class="project_item item_11">
-            <a href="#" target="_blank">
+            <a href="#">
               <img src="" alt="추가 예정입니다!">
               <div class="item_info">
                 <div class="info_txtwrap">
                   <p class="info_title">프로젝트명</p>
-                  <p>퍼블리싱 <span>&#8226;</span> 2019.07</p>
+                  <p>퍼블리싱 <span>&#8226;</span> 날짜</p>
                   <p>반응형(PC, 태블릿, 모바일)</p>
                   <p>크로스 브라우징이나 관련 정보</p>
                 </div>
@@ -194,12 +190,12 @@
             </a>
           </div>
           <div class="project_item item_12">
-            <a href="#" target="_blank">
+            <a href="#">
               <img src="" alt="추가 예정입니다!">
               <div class="item_info">
                 <div class="info_txtwrap">
                   <p class="info_title">프로젝트명</p>
-                  <p>퍼블리싱 <span>&#8226;</span> 2019.07</p>
+                  <p>퍼블리싱 <span>&#8226;</span> 날짜</p>
                   <p>반응형(PC, 태블릿, 모바일)</p>
                   <p>크로스 브라우징이나 관련 정보</p>
                 </div>
@@ -211,6 +207,19 @@
       </div>
     </section>
     <!-- //section -->
+    <!-- 이력서 일단 없앰
+      <div class="reume_modal">
+      <div class="pdf_wrap">
+        <img src="../../img/resume/resume.jpg" alt="이력서" style="width: 100%">
+      </div>
+      <div class="close_btn">
+        <span class="hidden">이력서 닫기</span>
+        <button type="button">
+          <i class="fa fa-times"></i>
+        </button>
+      </div>
+    </div> -->
+    <!-- //reume_modal -->
   </div>
   <!-- script -->
   <script src="../../js/base/jquery-3.2.1.js"></script>
