--- a/html/project/project_yg.html
+++ b/html/project/project_yg.html
@@ -22,9 +22,9 @@
   <!-- use css -->
   <link rel="stylesheet" href="../../css/src/project/project_yg.css">
   <!-- faviconFile -->
-  <!-- <link rel="apple-touch-icon" href="../favicon.png"> -->
-  <!-- <link rel="shortcut icon" href="../favicon.png" type="image/x-icon"> -->
-  <title>김하늘 포트폴리오 YG</title>
+  <link rel="apple-touch-icon" href="../../img/main/favicon.png">
+  <link rel="shortcut icon" href="../../img/main/favicon.png" type="image/x-icon">
+  <title>YG 리뉴얼, 개인 프로젝트</title>
 
 </head>
 <body>
@@ -32,10 +32,10 @@
     <header id="headBox">
       <h1>
         <a href="../mypage.html">
-          <span class="hidden">로고</span> 
+          <span class="hidden">김하늘 포트폴리오 홈버튼 로고</span> 
         </a>
       </h1>
-      <div class="page_name">YG 엔터테인먼트(개인, 비상업적)</div>
+      <div class="page_name">YG 엔터테인먼트(개인 프로젝트, 비상업적)</div>
     </header>
     <!-- //headBox -->
     <section>
@@ -62,6 +62,8 @@
         </div>
         <div class="intro_pro">
           <dl>
+            <dt>Cross Browsing</dt>
+            <dd>크롬, 파이어폭스, IE11, 엣지, 오페라</dd>
             <dt>Service</dt>
             <dd>연예 기획사 yg엔터테인먼트의 홈페이지</dd>
             <dt>Project</dt>
