--- a/html/project/project_output.html
+++ b/html/project/project_output.html
@@ -90,7 +90,7 @@
                   <p class="info_title">넷플릭스 목록 화면 응용(현재 페이지)</p>
                   <p>퍼블리싱 <span>&#8226;</span> 2019.07</p>
                   <p>css 애니메이션</p>
-                  <p>크로스 브라우징</p>
+                  <p>크롬 <span>&#8226;</span> 파이어폭스 <span>&#8226;</span> IE11 <span>&#8226;</span> 엣지 <span>&#8226;</span> 오페라</p>
                 </div>
               </div>
             </a>
