--- a/html/project/project_output.html
+++ b/html/project/project_output.html
@@ -70,14 +70,14 @@
             </a>
           </div>
           <div class="project_item item_03">
-            <a href="#" target="_blank">
-              <img src="" alt="마우스 스크롤 이용">
+            <a href="https://haneulkimgreen.github.io/spa/html/project/video_netflix.html" target="_blank">
+              <img src="" alt="비디오 플레이어 작업중입니다.">
               <div class="item_info">
                 <div class="info_txtwrap">
-                  <p class="info_title">마우스 스크롤 기능 관련 추가 예정</p>
-                  <p>퍼블리싱 <span>&#8226;</span> 2019.07</p>
-                  <p>마우스 스크롤</p>
-                  <p>크로스 브라우징</p>
+                  <p class="info_title">비디오 플레이어(넷플릭스 구현)</p>
+                  <p>퍼블리싱 <span>&#8226;</span> 2019.08</p>
+                  <p>PC <span>&#8226;</span> 비디오 플레이어 <span>&#8226;</span> 넷플릭스 구현</p>
+                  <p>추가할 작업 키보드 제어, 마우스에 따른 컨트롤러 제어</p>
                 </div>
               </div>
             </a>
