--- a/html/project/project_output.html
+++ b/html/project/project_output.html
@@ -125,14 +125,14 @@
         <!-- //project_row 01 -->
         <div class="project_row row_02">
           <div class="project_item item_07">
-            <a href="#">
-              <img src="" alt="추가 예정입니다!">
+            <a href="https://haneulkimgreen.github.io/spa/html/mong/20190902/main.html" target="_blank">
+              <img src="../../img/project_output/output_free_mobile.png" alt="프리랜서 모바일 3페이지">
               <div class="item_info">
                 <div class="info_txtwrap">
-                  <p class="info_title">프로젝트명</p>
-                  <p>퍼블리싱 <span>&#8226;</span> 날짜</p>
-                  <p>반응형(PC, 태블릿, 모바일)</p>
-                  <p>크로스 브라우징이나 관련 정보</p>
+                  <p class="info_title">프리랜서 모바일</p>
+                  <p>퍼블리싱 <span>&#8226;</span> 2019.09(1일, 프리랜서)</p>
+                  <p>모바일 전용 <span>&#8226;</span> 종류에 따른 3단계로 세분화 <span>&#8226;</span> 3페이지</p>
+                  <p>3페이지를 360 ~ 454, 455 ~ 550, 551이상으로 세분화</p>
                 </div>
               </div>
             </a>
