add output img_txt

--- a/html/project/project_output.html
+++ b/html/project/project_output.html
@@ -45,13 +45,13 @@
         <div class="project_row row_01">
           <div class="project_item item_01">
              <a href="https://haneulkimgreen.github.io/spa/html/project/video_netflix.html" target="_blank">
-              <img src="" alt="비디오 플레이어 작업중입니다.">
+              <img src="../../img/project_output/netflix_video.png" alt="비디오 플레이어 - 넷플릭스">
               <div class="item_info">
                 <div class="info_txtwrap">
                   <p class="info_title">비디오 플레이어 - 넷플릭스(개인, 비상업)</p>
-                  <p>퍼블리싱 <span>&#8226;</span> 2019.08</p>
+                  <p>퍼블리싱 <span>&#8226;</span> 2019.09</p>
                   <p>비디오 플레이어 <span>&#8226;</span> 넷플릭스 구현 <span>&#8226;</span> PC</p>
-                  <p>기능을 추가중입니다.</p>
+                  <p>크롬 <span>&#8226;</span> 동영상 제어 <span>&#8226;</span> 키보드 제어 <span>&#8226;</span> 스페이스바, 방향키</p>
                 </div>
               </div>
             </a>
